--- a/ui/app/components/index.scss
+++ b/ui/app/components/index.scss
@@ -60,4 +60,10 @@
 
 @import './unit-input/index';
 
-@import './gas-customization/gas-modal-page-container/index'
+@import './gas-customization/gas-modal-page-container/index';
+
+@import './gas-customization/gas-modal-page-container/index';
+
+@import './gas-customization/gas-modal-page-container/index';
+
+@import './gas-customization/index';
